# hackathon2022

./: .gitignore  README.md  benchy.py  generate_safe_utf8.py  notes.txt  pyproject.toml  s3zero.py
s3zero/: README.md  __init__.py  s3zero_blob.py  safe_utf8.py
s3zero/data/: lorem_ipsum.txt  safe_utf8.txt
tests/: README.md  test_s3zero.py  test_safe_utf8.py
