[tool.poetry]
name = "s3zero"
version = "0.1.0"
description = ""
authors = ["JD Kemsley <github@jdclark.biz>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.20.26"
moto = "^2.3.0"
base64io = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
